# assembler-interpreter

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
examples/: factorial  failing  fibonacci  gcd  modulo  power  power_mangled
src/asmint/: __main__.py  interpreter.py
tests/: test_interpreter.py  test_power.py
